# softsynth

./: .gitignore  .travis.yml  Cargo.toml  README.md
bluepill-player/: Cargo.toml
bluepill-player/src/: main.rs
examples/: wav-generator.rs
src/: adsr.rs  lib.rs  oscillator.rs  pitch.rs  songs.rs
