[package]
name = "wave-test"
version = "0.1.0"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>"]
edition = "2018"

[dependencies]
stm32f1xx-hal = { version = "0.2", features = ["stm32f103"] }
#stm32f103xx = { version = "0.10.0", features = ["rt"] }
cortex-m = "0.5"
cortex-m-rt = "0.6"
panic-semihosting = "0.5"
cortex-m-semihosting = "0.3"
embedded-hal = "0.2.2"
softsynth = { path = ".." }
